[gd_scene load_steps=2 format=3 uid="uid://dqsynufsvs58y"]

[ext_resource type="Script" path="res://Home/StudentQuiz/AnsweredQuiz.gd" id="1_3uomj"]

[node name="AnsweredQuiz" type="CenterContainer"]
custom_minimum_size = Vector2i(1490, 120)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -651.0
offset_right = 651.0
offset_bottom = 94.0
grow_horizontal = 2
script = ExtResource("1_3uomj")

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2i(1300, 20)
offset_left = 95.0
offset_top = 50.0
offset_right = 1395.0
offset_bottom = 70.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2i(1440, 80)
offset_left = 25.0
offset_top = 20.0
offset_right = 1465.0
offset_bottom = 100.0
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="VBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2i(1440, 80)
offset_left = 25.0
offset_top = 20.0
offset_right = 1465.0
offset_bottom = 100.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2i(5, 80)
offset_right = 5.0
offset_bottom = 80.0
color = Color(0.572549, 0.619608, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(600, 0)
offset_left = 9.0
offset_right = 609.0
offset_bottom = 80.0
theme_override_constants/separation = 0

[node name="QuizBox" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2i(500, 40)
offset_left = 30.0
offset_right = 570.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Quiz" type="Label" parent="VBoxContainer/VBoxContainer/QuizBox"]
offset_top = 7.0
offset_right = 60.0
offset_bottom = 33.0
text = "Prueba:"

[node name="QuizLabel" type="Label" parent="VBoxContainer/VBoxContainer/QuizBox"]
custom_minimum_size = Vector2i(460, 0)
offset_left = 80.0
offset_top = 7.0
offset_right = 540.0
offset_bottom = 33.0
text = "INSERTE NOMBRE"
clip_text = true

[node name="TeacherBox" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2i(500, 40)
offset_left = 30.0
offset_top = 40.0
offset_right = 570.0
offset_bottom = 80.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Teacher" type="Label" parent="VBoxContainer/VBoxContainer/TeacherBox"]
offset_top = 7.0
offset_right = 90.0
offset_bottom = 33.0
text = "Profesor(a):"

[node name="TeacherLabel" type="Label" parent="VBoxContainer/VBoxContainer/TeacherBox"]
custom_minimum_size = Vector2i(430, 0)
offset_left = 110.0
offset_top = 7.0
offset_right = 540.0
offset_bottom = 33.0
text = "INSERTE NOMBRE"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
offset_left = 613.0
offset_right = 1041.0
offset_bottom = 80.0
theme_override_constants/separation = 0

[node name="ScoreBox" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2i(400, 40)
offset_right = 428.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Score" type="Label" parent="VBoxContainer/VBoxContainer2/ScoreBox"]
offset_top = 7.0
offset_right = 145.0
offset_bottom = 33.0
text = "Puntaje Obtenido: "

[node name="ScoreLabel" type="Label" parent="VBoxContainer/VBoxContainer2/ScoreBox"]
custom_minimum_size = Vector2i(263, 0)
offset_left = 165.0
offset_top = 7.0
offset_right = 428.0
offset_bottom = 33.0
text = "INGRESAR PUNTAJE"

[node name="TimeBox" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2i(360, 40)
offset_left = 5.0
offset_top = 40.0
offset_right = 422.0
offset_bottom = 80.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="TimeLeft" type="Label" parent="VBoxContainer/VBoxContainer2/TimeBox"]
offset_top = 7.0
offset_right = 137.0
offset_bottom = 33.0
text = "Tiempo Invertido:"

[node name="TimeLeftLabel" type="Label" parent="VBoxContainer/VBoxContainer2/TimeBox"]
custom_minimum_size = Vector2i(260, 0)
offset_left = 157.0
offset_top = 7.0
offset_right = 417.0
offset_bottom = 33.0
text = "INSERTE FECHA DE ENTREGA"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(242, 0)
offset_left = 1045.0
offset_right = 1288.0
offset_bottom = 80.0
theme_override_constants/separation = 0

[node name="GradeBox" type="HBoxContainer" parent="VBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2i(0, 40)
offset_right = 243.0
offset_bottom = 40.0

[node name="Grade" type="Label" parent="VBoxContainer/VBoxContainer3/GradeBox"]
offset_top = 7.0
offset_right = 119.0
offset_bottom = 33.0
text = "Nota Obtenida:"

[node name="GradeLabel" type="Label" parent="VBoxContainer/VBoxContainer3/GradeBox"]
custom_minimum_size = Vector2i(120, 0)
offset_left = 123.0
offset_top = 7.0
offset_right = 243.0
offset_bottom = 33.0
text = "SIN NOTA"
